en lang file finished

--- a/assets/specializedstorage/lang/en.json
+++ b/assets/specializedstorage/lang/en.json
@@ -3,10 +3,10 @@
     "itemdesc-case-agriculture": "Can only hold agriculture items.",
     "item-case-cook": "Culinary Traveling Case",
     "itemdesc-case-cook": "Can only hold cooking items.",  
-    "item-case-engineer": "Engineering Traveling Case",
-    "itemdesc-case-engineer": "Can only hold mechanical items.",   
+    "item-case-engineer": "Instustrial Traveling Case",
+    "itemdesc-case-engineer": "Can only hold engineering items.",   
     "item-case-firewood": "Firekeeping Traveling Case",
-    "itemdesc-case-firewood": "Can only hold firewood and charcoal.",   
+    "itemdesc-case-firewood": "Can only hold firewood, charcoal, and coke.",   
     "item-case-forager": "Exploration Traveling Case",
     "itemdesc-case-forager": "Can only hold foragable items.",   
     "item-case-hunter": "Huntsman Traveling Case",
@@ -22,41 +22,107 @@
     "item-case-woodsman": "Forestry Traveling Case",
     "itemdesc-case-woodsman": "Can only hold forestry items.",
 
-    "item-depository-agriculture": "Agriculture Traveling Case",
+    "item-depository-agriculture": "Agriculture Depository",
     "itemdesc-depository-agriculture": "Can only hold agriculture items.",
-    "item-depository-cook": "Culinary Traveling Case",
+    "item-depository-cook": "Culinary Depository",
     "itemdesc-depository-cook": "Can only hold cooking items.",  
-    "item-depository-engineer": "Engineering Traveling Case",
-    "itemdesc-depository-engineer": "Can only hold items.",   
-    "item-depository-firewood": "Firekeeping Traveling Case",
-    "itemdesc-depository-firewood": "Can only hold firewood items.",   
-    "item-depository-forager": "Exploration Traveling Case",
-    "itemdesc-depository-forager": "Can only hold items.",   
-    "item-depository-hunter": "Huntsman Traveling Case",
-    "itemdesc-depository-hunter": "Can only hold foragable items.",
-    "item-depository-mason": "Masonry Traveling Case",
+    "item-depository-engineer": "Instustrial Depository",
+    "itemdesc-depository-engineer": "Can only hold engineering items.",   
+    "item-depository-firewood": "Firekeeping Depository",
+    "itemdesc-depository-firewood": "Can only hold firewood, charcoal, and coke.",   
+    "item-depository-forager": "Exploration Depository",
+    "itemdesc-depository-forager": "Can only hold foragable items.",   
+    "item-depository-hunter": "Huntsman Depository",
+    "itemdesc-depository-hunter": "Can only hold hunting items.",
+    "item-depository-mason": "Masonry Depository",
     "itemdesc-depository-mason": "Can only hold stonework items.",
-    "item-depository-mining": "Excavation Traveling Case",
+    "item-depository-mining": "Excavation Depository",
     "itemdesc-depository-mining": "Can only hold mining items.",
-    "item-depository-nautical": "Nautical Traveling Case",
+    "item-depository-nautical": "Nautical Depository",
     "itemdesc-depository-nautical": "Can only hold marine items.",
-    "item-depository-pottery": "Earthenware Traveling Case",
+    "item-depository-pottery": "Earthenware Depository",
     "itemdesc-depository-pottery": "Can only hold pottery items.",
-    "item-depository-woodsman": "Forestry Traveling Case",
+    "item-depository-woodsman": "Forestry Depository",
     "itemdesc-depository-woodsman": "Can only hold forestry items.",
 
-    "item-firewoodsatchel": "Firewood Satchel",
-    "itemdesc-firewoodsatchel": "Can only hold firewood and charcoal.",
+    "item-firewoodrack": "Firewood Storage Rack",
+    "itemdesc-firewoodrack": "Can only hold firewood, charcoal, and coke.",
 
-    "item-firewoodstack": "Firewood Wood Rack",
-    "itemdesc-firewoodsatchel": "Can only hold firewood and charcoal."
+    "item-firewoodsatchel": "Firewood Satchel",
+    "itemdesc-firewoodsatchel": "Can only hold firewood, charcoal, and coke.",
 
     "item-pouch-basic": "Pelt Pouch",
     "item-pouch-agriculture": "Farmer's Pouch",
     "itemdesc-pouch-agriculture": "Can only hold agriculture items.",
-    "item-pouch-cook": "Cooking Pouch",
+    "item-pouch-cook": "Cook's Pouch",
     "itemdesc-pouch-cook": "Can only hold cooking items.",
+    "item-pouch-forager": "Forager's Pouch",
+    "itemdesc-pouch-forager": "Can only hold foragable items.",   
+    "item-pouch-hunter": "Hunter's pouch",
+    "itemdesc-pouch-hunter": "Can only hold hunting items.",
+    "item-pouch-mason": "Craftsman's pouch",
+    "itemdesc-pouch-mason": "Can only hold stonework items.",
+    "item-pouch-nautical": "Mariner's pouch",
+    "itemdesc-pouch-nautical": "Can only hold marine items.",
+    "item-pouch-pottery": "Potter's pouch",
+    "itemdesc-pouch-pottery": "Can only hold pottery items.",
 
+    "item-sack-agriculture-basic": "Farming Bag",
+    "itemdesc-sack-agriculture-basic": "Can only hold agriculture items.",
+    "item-sack-engineer-basic": "Tinkering Bag",
+    "itemdesc-sack-engineer-basic": "Can only hold engineering items.",   
+    "item-sack-hunter-basic": "Hunting Bag",
+    "itemdesc-sack-hunter-basic": "Can only hold hunting items.",
+    "item-sack-mason-basic": "Manufactoring Bag",
+    "itemdesc-sack-mason-basic": "Can only hold stonework items.",
+    "item-sack-mining-basic": "Mining Bag",
+    "itemdesc-sack-mining-basic": "Can only hold mining items.",
+    "item-sack-nautical-basic": "Sailing Bag",
+    "itemdesc-sack-nautical-basic": "Can only hold marine items.",
+    "item-sack-pottery-basic": "Sculpting Bag",
+    "itemdesc-sack-pottery-basic": "Can only hold pottery items.",
+    "item-sack-woodsman-basic": "Logging Bag",
+    "itemdesc-sack-woodsman-basic": "Can only hold forestry items.",
+
+    "item-sack-agriculture-sturdy": "Sturdy Farming Bag",
+    "itemdesc-sack-agriculture-sturdy": "Can only hold agriculture items.",
+    "item-sack-engineer-sturdy": "Sturdy Tinkering Bag",
+    "itemdesc-sack-engineer-sturdy": "Can only hold engineering items.",   
+    "item-sack-hunter-sturdy": "Sturdy Hunting Bag",
+    "itemdesc-sack-hunter-sturdy": "Can only hold hunting items.",
+    "item-sack-mason-sturdy": "Sturdy Manufactoring Bag",
+    "itemdesc-sack-mason-sturdy": "Can only hold stonework items.",
+    "item-sack-mining-sturdy": "Sturdy Mining Bag",
+    "itemdesc-sack-mining-sturdy": "Can only hold mining items.",
+    "item-sack-nautical-sturdy": "Sturdy Sailing Bag",
+    "itemdesc-sack-nautical-sturdy": "Can only hold marine items.",
+    "item-sack-pottery-sturdy": "Sturdy Sculpting Bag",
+    "itemdesc-sack-pottery-sturdy": "Can only hold pottery items.",
+    "item-sack-woodsman-sturdy": "Sturdy Logging Bag",
+    "itemdesc-sack-woodsman-sturdy": "Can only hold forestry items.",
+
+    "item-strongbox-basic": "Strongbox",
+    "item-strongbox-agriculture": "Agriculture Strongbox",
+    "itemdesc-strongbox-agriculture": "Can only hold agriculture items.",
+    "item-strongbox-engineer": "Engineering Strongbox",
+    "itemdesc-strongbox-engineer": "Can only hold engineering items.",   
+    "item-strongbox-firewood": "Firewood Strongbox",
+    "itemdesc-strongbox-firewood": "Can only hold firewood, charcoal, and coke.",
+    "item-strongbox-mason": "Stonework Strongbox",
+    "itemdesc-strongbox-mason": "Can only hold stonework items.",
+    "item-strongbox-mining": "Mining Strongbox",
+    "itemdesc-strongbox-mining": "Can only hold mining items.",
+    "item-strongbox-nautical": "Marine Strongbox",
+    "itemdesc-strongbox-nautical": "Can only hold marine items.",
+    "item-strongbox-pottery": "Pottery Strongbox",
+    "itemdesc-strongbox-pottery": "Can only hold pottery items.",
+
+    
+    "item-woodsmanrack": "Log Storage Rack",
+    "itemdesc-woodsmanrack": "Can only hold logs and forestry items",
+
+    "item-woodsmansatchel": "Woodsman's Satchel",
+    "itemdesc-woodsmansatchel": "Can only hold logs and forestry items"
 
 
 }
