hitbox and lang updates

--- a/assets/specializedstorage/lang/en.json
+++ b/assets/specializedstorage/lang/en.json
@@ -68,9 +68,9 @@
     "item-strongbox-pottery": "Pottery Strongbox",
     "itemdesc-strongbox-pottery": "Can only hold pottery items.",
 
-    "item-satchel-firewood": "Firewood Satchel",
+    "item-satchel-firewood": "Firewood Pack",
     "itemdesc-satchel-firewood": "Can only hold firewood, charcoal, and coke.",
-    "item-satchel-woodsman": "Woodsman's Satchel",
+    "item-satchel-woodsman": "Woodsman's Pack",
     "itemdesc-satchel-woodsman": "Can only hold logs and forestry items"
 
 
